--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
 </head>
 <body>
     <div class="nav_menu">
-        <button type="button" class="close">  
+        <div class="container nav_menu_container">
+            <button type="button" class="close">  
                 <svg class="closing" width="8" height="8">
                 <use href="./images/icons.svg#icon-close"></use>
                  </svg>
-        </button>  
+            </button>
+                <nav class="mobile-menu-nav">
                 <ul class="navigation_modal">
                 <li><a class="site current" href="./index.html">Studio</a></li>
                 <li><a class="site" href="">Portfolio</a></li>
@@ -25,8 +27,8 @@
                 </nav>
                 <address class="contacts">
                 <ul class="navigation_modal_1">
-                    <li><a class="cnt" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li><a class="cnt" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                    <li><a class="phone" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                    <li><a class="mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 </ul>
                 </address>
                 <ul class="icons_list_section">
@@ -63,6 +65,7 @@
                         </a>
                     </li>
                 </ul>
+            </div>
     </div>
     <header class="top">
         <div class="container">
@@ -105,7 +108,7 @@
                             </svg>
                         </div>
                         <h3 class="featname">Strategy</h3>
-                        <p class="feat">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
+                        <p class="fe</div>at">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
                     </li>
                     <li class="featcard">
                         <div class="icon">
