--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                             </svg>
                         </div>
                         <h3 class="featname">Strategy</h3>
-                        <p class="fe</div>at">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
+                        <p class="feat">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
                     </li>
                     <li class="featcard">
                         <div class="icon">
